@@ -12,8 +12,11 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <struts.version>2.5.26</struts.version>
+    <struts.version>6.6.0</struts.version>
     <log4j2.version>2.24.3</log4j2.version>
+    <jetty-plugin.version>11.0.18</jetty-plugin.version>
+    <jakartaee-api.version>10.0.0</jakartaee-api.version>
+    <jakartaee-servlet.version>4.0.1</jakartaee-servlet.version>
   </properties>
 
   <dependencies>
@@ -24,6 +27,27 @@
       <artifactId>struts2-core</artifactId>
       <version>${struts.version}</version>
     </dependency>
+
+    <!-- Jakarta EE -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${jakartaee-servlet.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.servlet.jsp</groupId>
+      <artifactId>jakarta.servlet.jsp-api</artifactId>
+      <version>4.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-web-api</artifactId>
+      <version>${jakartaee-api.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
 
     <!-- Log4j2 -->
     <dependency>
@@ -51,22 +75,14 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.4.7.v20170914</version>
+        <version>9.4.51.v20230217</version>
         <configuration>
           <webApp>
-            <contextPath>/${project.build.finalName}</contextPath>
+            <contextPath>/struts</contextPath>
           </webApp>
-          <stopKey>CTRL+C</stopKey>
-          <stopPort>8999</stopPort>
-          <scanIntervalSeconds>10</scanIntervalSeconds>
-          <scanTargets>
-            <scanTarget>src/main/webapp/WEB-INF/web.xml</scanTarget>
-          </scanTargets>
-          <jvmArgs>
-            --add-opens=java.base/java.util=ALL_UNNAMED
-          </jvmArgs>
         </configuration>
       </plugin>
+
 
     </plugins>
     <pluginManagement>
